--- a/php/index.html
+++ b/php/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Understanding File Paths - PHP</title>
-  <link href='/css/style.css' rel='stylesheet'>
+  <link href='../css/style.css' rel='stylesheet'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&Source+Code+Pro:wght@300;400&display=swap" rel="stylesheet">
@@ -13,10 +13,10 @@
 <body id="php">
 
   <div id='container'>
-    <img class="header-img" alt="many paths crossing - Photo by Victor on Unsplash" src="/images/john-lockwood-FcLq69V7Rsc-unsplash.jpg">
+    <img class="header-img" alt="many paths crossing - Photo by Victor on Unsplash" src="../images/john-lockwood-FcLq69V7Rsc-unsplash.jpg">
     <nav>
-      <a title="Link to Home" href="/index.html">Home</a>
-      <a title="Link to HTML example" href="/html/index.html">HTML Example</a>
+      <a title="Link to Home" href="../index.html">Home</a>
+      <a title="Link to HTML example" href="../html/index.html">HTML Example</a>
     </nav>
 
     <header>
@@ -43,7 +43,7 @@
       <p>Therefore, when you run a web server in a Docker container, the server/computer root directory, and the web root directory are relative to the Docker container, not your local computer.</p>
 
         <div class="center-image">
-          <a title="link to image of Docker, computer and browser" href="/images/docker-file-path.png" target="_blank"><img alt="Folders on Docker, computer, and browser" src="/images/docker-file-path.png"></a>
+          <a title="link to image of Docker, computer and browser" href="../images/docker-file-path.png" target="_blank"><img alt="Folders on Docker, computer, and browser" src="../images/docker-file-path.png"></a>
         </div>
       </div>
 
@@ -231,8 +231,8 @@
 
 
     <nav>
-      <a title="Link to Home" href="/index.html">Home</a>
-      <a title="Link to HTML example" href="/html/index.html">HTML Example</a>
+      <a title="Link to Home" href="../index.html">Home</a>
+      <a title="Link to HTML example" href="../html/index.html">HTML Example</a>
     </nav>
 
 
