--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Understanding File Paths - HTML</title>
-  <link href='/css/style.css' rel='stylesheet'>
+  <link href='../css/style.css' rel='stylesheet'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&Source+Code+Pro:wght@300;400&display=swap" rel="stylesheet">
@@ -13,10 +13,10 @@
 <body id="html">
 
   <div id='container'>
-    <img class="header-img" alt="many paths crossing - Photo by Victor on Unsplash" src="/images/victor-0Ezh0PRhtPo-unsplash.jpg">
+    <img class="header-img" alt="many paths crossing - Photo by Victor on Unsplash" src="../images/victor-0Ezh0PRhtPo-unsplash.jpg">
     <nav>
-      <a title="Link to Home" href="/index.html">Home</a>
-      <a title="Link to PHP example" href="/php/index.html">PHP Example</a>
+      <a title="Link to Home" href="../index.html">Home</a>
+      <a title="Link to PHP example" href="../php/index.html">PHP Example</a>
     </nav>
 
     <header>
@@ -55,7 +55,7 @@
       <p>For example, the address <code>http://coolwebsite.com/index.html</code> points to a file in the web root directory named index.html</p>
 
       <div class="center-image">
-        <img alt="File in the browser and Finder" src="/images/browser-finder.png">
+        <img alt="File in the browser and Finder" src="../images/browser-finder.png">
       </div>
 
       <p>A web server translates the domain name (FQDN) to a specific folder. This allows a web server to handle multiple websites.</p>
@@ -143,8 +143,8 @@
     </main>
 
     <nav>
-      <a title="Link to Home" href="/index.html">Home</a>
-      <a title="Link to PHP example" href="/php/index.html">PHP Example</a>
+      <a title="Link to Home" href="../index.html">Home</a>
+      <a title="Link to PHP example" href="../php/index.html">PHP Example</a>
     </nav>
       
     <footer>
