--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div id='container'>
     <img class="header-img" alt="many paths crossing - Photo by Victor Charlie on Unsplash" src="images/victor-charlie-QG9xUOQTYCY-unsplash.jpg">
     <nav>
-      <a title="Link to HTML example" href="/html/index.html">HTML Example</a>
-      <a title="Link to PHP example" href="/php/index.html">PHP Example</a>
+      <a title="Link to HTML example" href="html/index.html">HTML Example</a>
+      <a title="Link to PHP example" href="php/index.html">PHP Example</a>
     </nav>
 
     <header>
@@ -49,11 +49,11 @@
 
       <h2>HTML</h2>
       <p>In HTML, file paths are associated with the web root, the folder where the files for the website are located. The web root folder is mapped to the domain name. If the website is not using a framework that utilizes routing, then the forward slashes in the URL reference folders in the web root.</p>
-      <div class="button"><a class="html" href="/html/index.html">Learn About HTML Paths</a></div>
+      <div class="button"><a class="html" href="html/index.html">Learn About HTML Paths</a></div>
 
       <h2>PHP</h2>
       <p>In PHP, file paths are associated with the file system of the computer. The root directory in a PHP file path maps to the the root directory of the computer.</p>
-      <div class="button"><a class="php" href="/php/index.html">Learn About PHP Paths</a></div>
+      <div class="button"><a class="php" href="php/index.html">Learn About PHP Paths</a></div>
 
 
     </main>
